--- a/2024/src/app/global.css
+++ b/2024/src/app/global.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Borel&family=Playwrite+ES+Deco:wght@100..400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -32,6 +35,17 @@ section {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+#hide-overflow-text::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  z-index: -1;
+
+  mask: linear-gradient(to top, black 10%, #00000099 40%, transparent 100%);
+  backdrop-filter: blur(10px);
 }
 
 #theme-toggler::after {
