--- a/2024/src/app/global.css
+++ b/2024/src/app/global.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Borel&family=Playwrite+ES+Deco:wght@100..400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Inter:wght@100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -12,26 +11,12 @@
 }
 
 html {
-  transition:
-    color 300ms,
-    background-color 300ms;
-  @apply bg-white dark:bg-charcoal;
+  transition: background-color 300ms;
+  @apply bg-neutral-100 dark:bg-black;
 }
 
 body {
   font-size: 16px;
-}
-
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition:
-    color 300ms,
-    border-color 300ms,
-    background-color 300ms,
-    opacity 400ms;
-  @apply rounded-xl bg-neutral-200 text-black md:rounded-2xl landscape:rounded-2xl dark:bg-black dark:text-white;
 }
 
 @layer utilities {
