--- a/2024/src/app/global.css
+++ b/2024/src/app/global.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Borel&family=Playwrite+ES+Deco:wght@100..400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Borel&family=Fira+Code:wght@300..700&family=Platypi:ital,wght@0,300..800;1,300..800&family=Space+Grotesk:wght@300..700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +9,7 @@
 }
 
 html {
+  scroll-behavior: smooth;
   transition: background-color 300ms;
   @apply bg-neutral-100 dark:bg-black;
 }
